# EvalKit

./: Dockerfile  README.md  alembic.ini  docker-compose.yml  prometheus.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 20240320_initial.py
docs/: ARCHITECTURE.md  QUICKSTART.md
evalkit/: config.py
evalkit/api/: main.py  schemas.py
evalkit/cli/: main.py
evalkit/core/: config.py
evalkit/dashboard/: app.py
evalkit/db/: database.py  models.py
evalkit/eval/: scorer.py
evalkit/metrics/: collector.py
evalkit/vector/: base.py  factory.py  faiss_store.py  pgvector_store.py
